added countries and towns for creating and updating parties, added author text for authors on home page

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,10 @@
   background-color: var(--primaryPurple);
 }
 
+.bg-authorButton {
+  opacity: 0.5;
+}
+
 html {
   background-color: var(--bgColor);
 }
